GNOME Bugzilla – Bug 774916
utils: Export linear regression calculation as public function
Last modified: 2016-11-28 12:28:14 UTC
See commit message
Created attachment 340596 [details] [review] utils: Export linear regression calculation as public function It is useful outside the GstClock code too.
https://bugzilla.gnome.org/show_bug.cgi?id=774916 for making the linear regression public properly.
Attachment 340596 [details] pushed as a7d282d - utils: Export linear regression calculation as public function