utils: Export linear regression calculation as public function

It is useful outside the GstClock code too.

https://bugzilla.gnome.org/show_bug.cgi?id=774916